--- a/index.html
+++ b/index.html
@@ -1,13 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ismael</title>
-    <link rel="stylesheet" href="./public/css/style.css">
+    <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="./public/src/css/style.css">
+
 </head>
+
 <body>
-    
+    <div class="container">
+
+
+        <nav class="navbar navbar-expand-lg navbar-light bg-white">
+            <a class="navbar-brand" href="#">
+                <img src="./img/logo.png" alt="">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Ministries</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Sermons</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Event</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Pages</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Blog</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contact</a>
+                    </li>
+
+                </ul>
+
+            </div>
+
+            <div class="barre"> </div>
+
+        </nav>
+
+    </div>
+
+
+    <section>
+        <div class="container text-center pt-5">
+            <h1> Welcome to fhait Church</h1>
+            <p> ceci est un un petit text ecrit en petit en dessous du titre mais appaerement ça ne fonctionne pas mais
+                je travail pour que cela fonctionne </p>
+
+
+            <div class="row pt-5 ">
+                <div class="col-5 text-left pt-5 ">
+                    <h4> <strong> Did not find your Package Fool froo to ask us. We'il makeit for you </strong></h4>
+                    <p>egehfjkerhgbdfkbgjkfbgkbfkgbkbjkcgb <br>
+                        ekjtfhekgrjfbgdgbdghdfbjgfg <br>
+                        gfbgdjhsbgsfjhfgjhdbgfjsbgdfbj <br>
+                        eyfgdjhgfjdgjhgsdjhfgdjhfgdjgjhsfgj</p>
+                </div>
+                <div class="col-5 pt-2">
+                    <img src="./img/about.jpg" alt="">
+                </div>
+            </div>
+            <a href=""></a>
+        </div>
+
+    </section>
+
+    <section>
+        <div class="container">
+            <div class="row pt-5">
+                <div class="col-3 colora p-5 ">
+                    <h6 class="text-white"> <strong> Spreading Light to world</strong> </h6>
+                    <p class="text-white"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio quasi, quidem
+                        velit quos ex
+                        repellat
+                        necessitatibus laudantium exercitationem.</p>
+                    <a href=""> <button type="button" class="btn btn-light">Vieuw Details</button>
+                    </a>
+
+                </div>
+                <div class="col-3 colorb p-5">
+                    <h6 class="text-white"> <strong> Spreading Light to world</strong> </h6>
+                    <p class="text-white"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio quasi, quidem
+                        velit quos ex
+                        repellat
+                        necessitatibus laudantium exercitationem.</p>
+                    <a href=""> <button type="button" class="btn btn-light">Vieuw Details</button>
+                    </a>
+
+                </div>
+                <div class="col-3 colora p-5 ">
+                    <h6 class="text-white"> <strong> Spreading Light to world</strong> </h6>
+                    <p class="text-white"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio quasi, quidem
+                        velit quos ex
+                        repellat
+                        necessitatibus laudantium exercitationem.</p>
+                    <a href=""> <button type="button" class="btn btn-light">Vieuw Details</button>
+                    </a>
+
+                </div>
+                <div class="col-3 colorb p-5 ">
+                    <h6 class="text-white"> <strong> Spreading Light to world</strong> </h6>
+                    <p class="text-white"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio quasi, quidem
+                        velit quos ex
+                        repellat
+                        necessitatibus laudantium exercitationem.</p>
+                    <a href=""> <button type="button" class="btn btn-light">Vieuw Details</button>
+                    </a>
+
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
