--- a/index.html
+++ b/index.html
@@ -128,6 +128,10 @@
             </div>
         </div>
     </section>
+
+    <footer class="pt-3">
+        <div class="container colorn pb-3"> jhghghg </div>
+    </footer>
 </body>
 
 </html>
